general overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,7 @@ div.footer h6 {
 @media only screen and (max-width: 600px) {
   /* top navigation */
   div.nav-bar {
+    width: inherit;
     padding: 7px 5px;
   }
 
@@ -463,6 +464,7 @@ div.footer h6 {
   /* top navigation*/
   div.nav-bar {
     padding: 10px 10px;
+    width: inherit;
   }
 
   div.logo {
